k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: home
spec:
    replicas: 2
    selector:
        matchLabels:
            app: home
    template:
        metadata:
            labels:
                app: home
        spec:
            containers:
                - name: nextjs-container
                  image: public.ecr.aws/o6i8p2j4/home:latest
                  ports:
                      - containerPort: 3000
