k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: home-ingress
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
        alb.ingress.kubernetes.io/healthcheck-port: traffic-port
        alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
        alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
        alb.ingress.kubernetes.io/success-codes: '200'
        alb.ingress.kubernetes.io/healthy-threshold-count: '2'
        alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
        # kubernetes.io/ingress.class: alb
        # alb.ingress.kubernetes.io/scheme: internet-facing
        # alb.ingress.kubernetes.io/target-type: ip
        # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
    rules:
        # - http:
        #       paths:
        #           - path: /
        #             pathType: Prefix
        #             backend:
        #                 service:
        #                     name: home-service
        #                     port:
        #                         number: 80
        - host: uno.unmsm.link
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: home-service
                            port:
                                name: http
#         - host: dos.unmsm.link
#           http:
#               paths:
#                   - path: /
#                     pathType: Prefix
#                     backend:
#                         service:
#                             name: home-service
#                             port:
#                                 name: http
# spec:
#     rules:
#         - http:
#               paths:
#   - path: /no_null.html
#     pathType: Exact
#     backend:
#         service:
#             name: home-service
#             port:
#                 number: 80
#   - path: /principal
#     pathType: Prefix
#     backend:
#         service:
#             name: home-service
#             port:
#                 number: 80
#   - path: /
#     pathType: Prefix
#     backend:
#         service:
#             name: home-service
#             port:
#                 number: 80
